--- a/putninalozi/templates/register_tw.html
+++ b/putninalozi/templates/register_tw.html
@@ -4,7 +4,7 @@
   <form method="POST" action="">
     {{ form.hidden_tag() }}
       <fieldset class="form-group">
-        <legend class="border-bottom mb-4">Create New Travel Warrant</legend>
+        <legend class="border-bottom mb-4">{{legend}}</legend>
         <div class="form-group">
           {{ form.user_id.label(class="form-control-label") }}
 
