--- a/putninalozi/templates/login.html
+++ b/putninalozi/templates/login.html
@@ -4,7 +4,7 @@
         <form method="POST" action="">
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Log In</legend>
+                <legend class="border-bottom mb-4">{{legend}}</legend>
                 <div class="form-group">
                     {{ form.email.label(class="form-control-label") }}
 
@@ -40,7 +40,7 @@
             <div class="form-group">
               {{ form.submit(class="btn btn-outline-info") }}
               <small class="text-muted ml-2">
-                <a href="{{ url_for('users.reset_request') }}">Forgot Password?</a>
+                <a href="{{ url_for('users.reset_request') }}">Resetovanje Lozinke?</a>
               </small>
             </div>
           </form>
