--- a/putninalozi/templates/register_v.html
+++ b/putninalozi/templates/register_v.html
@@ -4,7 +4,7 @@
     <form method="POST" action="">
         {{ form.hidden_tag() }}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Add New Vehicle</legend>
+            <legend class="border-bottom mb-4">{{legend}}</legend>
             <div class="form-group">
                 {{ form.vehicle_type.label(class="form-control-label") }}
 
