--- a/putninalozi/templates/travel_warrant_list.html
+++ b/putninalozi/templates/travel_warrant_list.html
@@ -1,15 +1,15 @@
 {% extends "layout.html" %}
 {% block content %}
 {% if current_user.authorization != 'c_user' %}
-  <a class="btn btn-info btn-sm m-1" href="{{ url_for('travel_warrants.register_tw') }}">Create New Travel Warrant</a>
+  <a class="btn btn-info btn-sm m-1" href="{{ url_for('travel_warrants.register_tw') }}">Kreiranje Novog Putnog Naloga</a>
 {% endif %}
 <hr>
 <table id="data" border="1" class="table table-striped">
   {% if current_user.authorization == 's_admin' %}
     <thead>
       <tr id="header">
-        <th>Br Putnog Naloga</th>
-        <th>Company</th>
+        <th>Br</th>
+        <th>Kompanija</th>
         <th>Zaposleni</th>
         <th>Transport</th>
         <th>Status</th>
@@ -29,7 +29,7 @@
   {% elif current_user.authorization == 'c_admin' %}
     <thead>
       <tr id="header">
-        <th>Br Putnog Naloga</th>
+        <th>Br</th>
         <th>Zaposleni</th>
         <th>Transport</th>
         <th>Status</th>
@@ -50,7 +50,7 @@
   {% else %}
     <thead>
       <tr id="header">
-        <th>Br Putnog Naloga</th>
+        <th>Br</th>
         <th>Zaposleni</th>
         <th>Transport</th>
         <th>Status</th>
