--- a/putninalozi/templates/company.html
+++ b/putninalozi/templates/company.html
@@ -15,7 +15,6 @@
             <legend class="border-bottom mb-4">{{ legend }}</legend>
             <div class="form-group">
                 {{ form.companyname.label(class="form-control-label") }}
-
                 {% if form.companyname.errors %}
                     {{ form.companyname(class="form-control form-control-lg is-invalid") }}
                     <div class="invalid-feedback">
@@ -29,7 +28,6 @@
             </div>
             <div class="form-group">
                 {{ form.company_address.label(class="form-control-label") }}
-
                 {% if form.company_address.errors %}
                     {{ form.company_address(class="form-control form-control-lg is-invalid") }}
                     <div class="invalid-feedback">
@@ -43,7 +41,6 @@
             </div>
             <div class="form-group">
                 {{ form.company_address_number.label(class="form-control-label") }}
-
                 {% if form.company_address_number.errors %}
                     {{ form.company_address_number(class="form-control form-control-lg is-invalid") }}
                     <div class="invalid-feedback">
@@ -57,7 +54,6 @@
             </div>
             <div class="form-group">
                 {{ form.company_zip_code.label(class="form-control-label") }}
-
                 {% if form.company_zip_code.errors %}
                     {{ form.company_zip_code(class="form-control form-control-lg is-invalid") }}
                     <div class="invalid-feedback">
@@ -71,7 +67,6 @@
             </div>
             <div class="form-group">
                 {{ form.company_city.label(class="form-control-label") }}
-
                 {% if form.company_city.errors %}
                     {{ form.company_city(class="form-control form-control-lg is-invalid") }}
                     <div class="invalid-feedback">
@@ -85,7 +80,6 @@
             </div>
             <div class="form-group">
                 {{ form.company_state.label(class="form-control-label") }}
-
                 {% if form.company_state.errors %}
                     {{ form.company_state(class="form-control form-control-lg is-invalid") }}
                     <div class="invalid-feedback">
@@ -99,7 +93,6 @@
             </div>
             <div class="form-group">
                 {{ form.company_pib.label(class="form-control-label") }}
-
                 {% if form.company_pib.errors %}
                     {{ form.company_pib(class="form-control form-control-lg is-invalid") }}
                     <div class="invalid-feedback">
@@ -113,7 +106,6 @@
             </div>
             <div class="form-group">
                 {{ form.company_mb.label(class="form-control-label") }}
-
                 {% if form.company_mb.errors %}
                     {{ form.company_mb(class="form-control form-control-lg is-invalid") }}
                     <div class="invalid-feedback">
@@ -127,7 +119,6 @@
             </div>
             <div class="form-group">
                 {{ form.company_site.label(class="form-control-label") }}
-
                 {% if form.company_site.errors %}
                     {{ form.company_site(class="form-control form-control-lg is-invalid") }}
                     <div class="invalid-feedback">
@@ -141,7 +132,6 @@
             </div>
             <div class="form-group">
                 {{ form.company_mail.label(class="form-control-label") }}
-
                 {% if form.company_mail.errors %}
                     {{ form.company_mail(class="form-control form-control-lg is-invalid") }}
                     <div class="invalid-feedback">
@@ -155,7 +145,6 @@
             </div>
             <div class="form-group">
                 {{ form.company_phone.label(class="form-control-label") }}
-
                 {% if form.company_phone.errors %}
                     {{ form.company_phone(class="form-control form-control-lg is-invalid") }}
                     <div class="invalid-feedback">
@@ -165,6 +154,32 @@
                     </div>
                 {% else %}
                     {{ form.company_phone(class="form-control form-control-lg") }}
+                {% endif %}
+            </div>
+            <div class="form-group">
+                {{ form.cashier_email.label(class="form-control-label") }}
+                {% if form.cashier_email.errors %}
+                    {{ form.cashier_email(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.cashier_email.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.cashier_email(class="form-control form-control-lg") }}
+                {% endif %}
+            </div>
+            <div class="form-group">
+                {{ form.CEO.label(class="form-control-label") }}
+                {% if form.CEO.errors %}
+                    {{ form.CEO(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.CEO.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.CEO(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
             <div class="form-group">
