--- a/putninalozi/templates/register_tw.html
+++ b/putninalozi/templates/register_tw.html
@@ -7,7 +7,6 @@
         <legend class="border-bottom mb-4">{{legend}}</legend>
         <div class="form-group">
           {{ form.user_id.label(class="form-control-label") }}
-
             {% if form.user_id.errors %}
                 {{ form.user_id(class="form-control form-control-lg is-invalid") }}
                 <div class="invalid-feedback">
@@ -16,12 +15,11 @@
                     {% endfor %}
                 </div>
             {% else %}
-                {{ form.user_id(class="form-control form-control-lg") }}
+                {{ form.user_id(class="form-select form-select-lg") }}
             {% endif %}
         </div>
         <div class="form-group">
           {{ form.with_task.label(class="form-control-label") }}
-
             {% if form.with_task.errors %}
                 {{ form.with_task(class="form-control form-control-lg is-invalid") }}
                 <div class="invalid-feedback">
@@ -146,7 +144,7 @@
                             {% endfor %}
                         </div>
                     {% else %}
-                        {{ form.vehicle_id(class="form-control form-control-lg") }}
+                        {{ form.vehicle_id(class="form-select form-select-lg") }}
                     {% endif %}
                 </div>
               </div>
@@ -198,7 +196,7 @@
                             {% endfor %}
                         </div>
                     {% else %}
-                        {{ form.personal_type(class="form-control form-control-lg", placeholder="Uneti broj putnog naloga kolege koji vozi službeno vozilo") }}
+                        {{ form.personal_type(class="form-select form-select-lg") }}
                     {% endif %}
                 </div>
                 <div class="form-box">
@@ -261,7 +259,6 @@
         <br>
         <div class="form-box">
           {{ form.advance_payment.label(class="form-control-label") }}
-
             {% if form.advance_payment.errors %}
                 {{ form.advance_payment(class="form-control form-control-lg is-invalid") }}
                 <div class="invalid-feedback">
@@ -284,7 +281,7 @@
                     {% endfor %}
                 </div>
             {% else %}
-                {{ form.advance_payment_currency(class="form-control form-control-lg") }}
+                {{ form.advance_payment_currency(class="form-select form-select-lg") }}
             {% endif %}
         </div>
         <br>
@@ -304,7 +301,6 @@
         </div>
         <div class="form-box">
           {{ form.daily_wage_currency.label(class="form-control-label") }}
-
             {% if form.daily_wage_currency.errors %}
                 {{ form.daily_wage_currency(class="form-control form-control-lg is-invalid") }}
                 <div class="invalid-feedback">
@@ -313,7 +309,7 @@
                     {% endfor %}
                 </div>
             {% else %}
-                {{ form.daily_wage_currency(class="form-control form-control-lg") }}
+                {{ form.daily_wage_currency(class="form-select form-select-lg") }}
             {% endif %}
         </div>
         <br>
