--- a/putninalozi/templates/register_v.html
+++ b/putninalozi/templates/register_v.html
@@ -7,7 +7,6 @@
             <legend class="border-bottom mb-4">{{legend}}</legend>
             <div class="form-group">
                 {{ form.vehicle_type.label(class="form-control-label") }}
-
                 {% if form.vehicle_type.errors %}
                     {{ form.vehicle_type(class="form-control form-control-lg is-invalid") }}
                     <div class="invalid-feedback">
@@ -16,12 +15,11 @@
                         {% endfor %}
                     </div>
                 {% else %}
-                    {{ form.vehicle_type(class="form-control form-control-lg") }}
+                    {{ form.vehicle_type(class="form-select form-select-lg") }}
                 {% endif %}
             </div>
             <div class="form-group">
                 {{ form.vehicle_brand.label(class="form-control-label") }}
-
                 {% if form.vehicle_brand.errors %}
                     {{ form.vehicle_brand(class="form-control form-control-lg is-invalid") }}
                     <div class="invalid-feedback">
@@ -50,7 +48,6 @@
             {% if current_user.authorization == 's_admin'%}
               <div class="form-group">
                   {{ form.company_id.label(class="form-control-label") }}
-
                   {% if form.company_id.errors %}
                       {{ form.company_id(class="form-control form-control-lg is-invalid") }}
                       <div class="invalid-feedback">
@@ -59,11 +56,11 @@
                           {% endfor %}
                       </div>
                   {% else %}
-                      {{ form.company_id(class="form-control form-control-lg") }}
+                      {{ form.company_id(class="form-select form-select-lg") }}
                   {% endif %}
               </div>
             {% else %}
-              {{ form.company_id(class="sr-only form-control form-control-lg") }}
+              {{ form.company_id(class="sr-only form-select form-select-lg") }}
             {% endif %}
         </fieldset>
         <div class="form-group">
