--- a/putninalozi/templates/user_list.html
+++ b/putninalozi/templates/user_list.html
@@ -19,7 +19,7 @@
     <tbody>
       {% for user in users %}
         <tr>
-          <td> <a class="mr-2" href="{{ url_for('users.user_profile', user_id=user.id) }}" title="Edit User">{{ user.name }} {{ user.surname }}</a> </td>
+          <td> <a class="mr-2 btn btn-info" href="{{ url_for('users.user_profile', user_id=user.id) }}" title="Uređivanje Korisnika">{{ user.name }} {{ user.surname }}</a> </td>
           <td>{{ user.user_company.companyname }}</td>
           <td>{{ user.authorization }}</td>
           <td>{{ user.email }}</td>
@@ -37,7 +37,7 @@
       {% for user in users %}
         {% if user.user_company.id == current_user.user_company.id %}
           <tr>
-            <td> <a class="mr-2" href="{{ url_for('users.user_profile', user_id=user.id) }}" title="Edit User">{{ user.name }} {{ user.surname }}</a> </td>
+            <td> <a class="mr-2 btn btn-info" href="{{ url_for('users.user_profile', user_id=user.id) }}" title="Uređivanje Korisnika">{{ user.name }} {{ user.surname }}</a> </td>
             <td>{{ user.email }}</td>
           </tr>
         {% endif %}
@@ -54,7 +54,7 @@
       {% for user in users %}
         {% if user.id == current_user.id %}
           <tr>
-            <td> <a class="mr-2" href="{{ url_for('users.user_profile', user_id=user.id) }}" title="Edit User">{{ user.name }} {{ user.surname }}</a> </td>
+            <td> <a class="mr-2 btn btn-info" href="{{ url_for('users.user_profile', user_id=user.id) }}" title="Uređivanje Korisnika">{{ user.name }} {{ user.surname }}</a> </td>
             <td>{{ user.email }}</td>
           </tr>
         {% endif %}
