ver 0.202 - izmene po Simketovim predlozima

--- a/putninalozi/templates/company_list.html
+++ b/putninalozi/templates/company_list.html
@@ -19,9 +19,9 @@
   {% if current_user.authorization == 's_admin' %}
     {% for company in companys %}
       <tr>
-        <td><a class="mr-2 btn btn-info" href="{{ url_for('companys.company_profile', company_id=company.id) }}" title="Uredđivanje Kompanije">{{ company.companyname }}</a></td>
+        <td><a class="mr-2 btn btn-info" href="{{ url_for('companys.company_profile', company_id=company.id) }}" title="Uređivanje Kompanije">{{ company.companyname }}</a></td>
         <td>{{ company.company_address }} {{ company.company_address_number }}</td>
-        <td>{{ company.company_city }} {{ company.company_state }}</td>
+        <td>{{ company.company_city }}, {{ company.company_state }}</td>
         <td>{{ company.company_site }} / {{ company.company_mail }} / {{ company.company_phone }}</td>
       </tr>
     {% endfor %}
@@ -31,7 +31,7 @@
         <tr>
           <td><a class="mr-2 btn btn-info" href="{{ url_for('companys.company_profile', company_id=company.id) }}" title="Uredđivanje Kompanije">{{ company.companyname }}</a></td>
           <td>{{ company.company_address }} {{ company.company_address_number }}</td>
-          <td>{{ company.company_city }} {{ company.company_state }}</td>
+          <td>{{ company.company_city }}, {{ company.company_state }}</td>
         </tr>
       {% endif %}
     {% endfor %}
