--- a/putninalozi/templates/layout.html
+++ b/putninalozi/templates/layout.html
@@ -32,12 +32,12 @@
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
               {% if current_user.is_authenticated %}
-                <a class="nav-item nav-link" href="{{ url_for('main.home') }}">Home</a>
-                <a class="nav-item nav-link" href="{{ url_for('main.about') }}">About</a>
-                <a class="nav-item nav-link" href="{{ url_for('travel_warrants.travel_warrant_list') }}">Putni Nalog</a>
+                <a class="nav-item nav-link" href="{{ url_for('main.home') }}">Početna</a>
+                <a class="nav-item nav-link" href="{{ url_for('main.about') }}">O softveru</a>
+                <a class="nav-item nav-link" href="{{ url_for('travel_warrants.travel_warrant_list') }}">Putni nalozi</a>
               {% else %}
-                <a class="nav-item nav-link" href="{{ url_for('main.home') }}">Home</a>
-                <a class="nav-item nav-link" href="{{ url_for('main.about') }}">About</a>
+                <a class="nav-item nav-link" href="{{ url_for('main.home') }}">Početna</a>
+                <a class="nav-item nav-link" href="{{ url_for('main.about') }}">O softveru</a>
               {% endif %}
             </div>
             <!-- Navbar Right Side -->
@@ -45,16 +45,16 @@
               {% if current_user.is_authenticated %}
                 {% if current_user.authorization == 's_admin' %}
                   <a class="nav-item nav-link" href="{{ url_for('companys.company_list') }}">Kompanija</a>
-                  <a class="nav-item nav-link" href="{{ url_for('vehicles.vehicle_list') }}">Vozilo</a>
-                  <a class="nav-item nav-link" href="{{ url_for('users.user_list') }}">Korisnik</a>
-                  <a class="nav-item nav-link" href="{{ url_for('users.logout') }}">Odjaviti Se</a>
+                  <a class="nav-item nav-link" href="{{ url_for('vehicles.vehicle_list') }}">Vozila</a>
+                  <a class="nav-item nav-link" href="{{ url_for('users.user_list') }}">Korisnici</a>
+                  <a class="nav-item nav-link" href="{{ url_for('users.logout') }}">Odjavite se</a>
                 {% elif current_user.authorization == 'c_admin'%}
                   <a class="nav-item nav-link" href="{{ url_for('companys.company_list') }}">Kompanija</a>
-                  <a class="nav-item nav-link" href="{{ url_for('vehicles.vehicle_list') }}">Vozilo</a>
-                  <a class="nav-item nav-link" href="{{ url_for('users.user_list') }}">Korisnik</a>
-                  <a class="nav-item nav-link" href="{{ url_for('users.logout') }}">Odjaviti Se</a>
+                  <a class="nav-item nav-link" href="{{ url_for('vehicles.vehicle_list') }}">Vozila</a>
+                  <a class="nav-item nav-link" href="{{ url_for('users.user_list') }}">Korisnici</a>
+                  <a class="nav-item nav-link" href="{{ url_for('users.logout') }}">Odjavite se</a>
                 {% else %}
-                  <a class="nav-item nav-link" href="{{ url_for('users.logout') }}">Odjaviti Se</a>
+                  <a class="nav-item nav-link" href="{{ url_for('users.logout') }}">Odjavite se</a>
                 {% endif %}
               {% else %}
                 <a class="nav-item nav-link" href="{{ url_for('users.login') }}">Prijavljivanje</a>
@@ -66,7 +66,7 @@
     </header>
     <main role="main" class="container">
       <div class="row">
-        <div class="col-md-8">
+        <div class="col-md-20">
           {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
               {% for category, message in messages %}
@@ -77,19 +77,6 @@
             {% endif %}
           {% endwith %}
           {% block content %}{% endblock %}
-        </div>
-        <div class="col-md-4">
-          <div class="content-section">
-            <h3>Our Sidebar</h3>
-            <p class='text-muted'>You can put any information here you'd like.
-              <ul class="list-group">
-                <li class="list-group-item list-group-item-light">Latest Posts</li>
-                <li class="list-group-item list-group-item-light">Announcements</li>
-                <li class="list-group-item list-group-item-light">Calendars</li>
-                <li class="list-group-item list-group-item-light">etc</li>
-              </ul>
-            </p>
-          </div>
         </div>
       </div>
     </main>
