--- a/putninalozi/templates/user.html
+++ b/putninalozi/templates/user.html
@@ -43,7 +43,7 @@
                         {% endfor %}
                     </div>
                 {% else %}
-                    {{ form.gender(class="form-control form-control-lg") }}
+                    {{ form.gender(class="form-select form-select-lg") }}
                 {% endif %}
             </div>
             <div class="form-group">
