--- a/putninalozi/templates/user_list.html
+++ b/putninalozi/templates/user_list.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 {% if current_user.authorization != 'c_user' %}
-  <a class="btn btn-info btn-sm m-1" href="{{ url_for('users.register_u') }}">Registruj Novog Korisnika</a>
+  <a class="btn btn-info btn-sm m-1" href="{{ url_for('users.register_u') }}">Registruj novog korisnika</a>
 {% endif %}
 <hr>
 
@@ -10,7 +10,7 @@
   {% if current_user.authorization == 's_admin' %}
     <thead>
       <tr id="header">
-        <th>Ime Prezime</th>
+        <th>Ime i prezime</th>
         <th>Kompanija</th>
         <th>Autorizacija</th>
         <th>email</th>
@@ -29,7 +29,7 @@
   {% elif current_user.authorization == 'c_admin' %}
     <thead>
       <tr id="header">
-        <th>Ime Prezime</th>
+        <th>Ime i prezime</th>
         <th>email</th>
       </tr>
     </thead>
@@ -46,7 +46,7 @@
   {% else %}
     <thead>
       <tr id="header">
-        <th>Ime Prezime</th>
+        <th>Ime i prezime</th>
         <th>email</th>
       </tr>
     </thead>
