--- a/putninalozi/templates/vehicle_list.html
+++ b/putninalozi/templates/vehicle_list.html
@@ -1,14 +1,14 @@
 {% extends "layout.html" %}
 {% block content %}
 {% if current_user.authorization != 'c_user' %}
-  <a class="btn btn-info btn-sm m-1" href="{{ url_for('vehicles.register_v') }}">Registruj Novo Vozilo</a>
+  <a class="btn btn-info btn-sm m-1" href="{{ url_for('vehicles.register_v') }}">Registruj novo vozilo</a>
 {% endif %}
 <table id="data" border="1" class="table table-striped">
   {% if current_user.authorization == 's_admin' %}
     <thead>
       <tr>
         <th>Tip Vozila</th>
-        <th>Brend</th>
+        <th>Marka vozila</th>
         <th>Registracija</th>
         <th>Kompanija</th>
       </tr>
@@ -27,7 +27,7 @@
     <thead>
       <tr>
         <th>Tip Vozila</th>
-        <th>Brend</th>
+        <th>Marka vozila</th>
         <th>Registracija</th>
       </tr>
     </thead>
