ver 0.203 - tabele / kontrolni dumići prevedene na srpski

--- a/putninalozi/templates/user_list.html
+++ b/putninalozi/templates/user_list.html
@@ -67,7 +67,11 @@
 {% block scripts %}
   <script>
     $(document).ready(function () {
-      $('#data').DataTable();
-    });
+      $('#data').DataTable( {
+        language: {
+          url: "//cdn.datatables.net/plug-ins/1.12.1/i18n/sr-SP.json"
+        }
+      } );
+    } );
   </script>
 {% endblock %}
