--- a/putninalozi/templates/layout.html
+++ b/putninalozi/templates/layout.html
@@ -87,7 +87,13 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script type="text/javascript" charset="utf8" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.js"></script>
+    <!-- <script type="text/javascript" charset="utf8" src="file:///D:/Mihas/Programming/ython/Projects/PutniNalozi/putninalozi/js/jquery.dataTables.js"></script> -->
+
+    <!-- "file:///D:/Mihas/Programming/ython/Projects/PutniNalozi/putninalozi/js/jquery.dataTables.js" -->
+
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.25/js/dataTables.bootstrap5.js"></script>
 
     {% block scripts %}{% endblock %}
