--- a/putninalozi/templates/register_u.html
+++ b/putninalozi/templates/register_u.html
@@ -5,88 +5,130 @@
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">{{legend}}</legend>
-                <div class="form-group">
-                    {{ form.email.label(class="form-control-label") }}
+                <div class="row">
+                  <div class="col form-group">
+                      {{ form.email.label(class="form-control-label") }}
+                      {% if form.email.errors %}
+                          {{ form.email(class="form-control form-control-lg is-invalid") }}
+                          <div class="invalid-feedback">
+                              {% for error in form.email.errors %}
+                                  <span>{{ error }}</span>
+                              {% endfor %}
+                          </div>
+                      {% else %}
+                          {{ form.email(class="form-control form-control-lg") }}
+                      {% endif %}
+                  </div>
+                  <div class="col form-group">
+                      {{ form.gender.label(class="form-control-label") }}
 
-                    {% if form.email.errors %}
-                        {{ form.email(class="form-control form-control-lg is-invalid") }}
-                        <div class="invalid-feedback">
-                            {% for error in form.email.errors %}
-                                <span>{{ error }}</span>
-                            {% endfor %}
-                        </div>
-                    {% else %}
-                        {{ form.email(class="form-control form-control-lg") }}
-                    {% endif %}
+                      {% if form.gender.errors %}
+                          {{ form.gender(class="form-control form-control-lg is-invalid") }}
+                          <div class="invalid-feedback">
+                              {% for error in form.gender.errors %}
+                                  <span>{{ error }}</span>
+                              {% endfor %}
+                          </div>
+                      {% else %}
+                          {{ form.gender(class="form-select form-select-lg") }}
+                      {% endif %}
+                  </div>
                 </div>
-                <div class="form-group">
-                    {{ form.password.label(class="form-control-label") }}
-                    {% if form.password.errors %}
-                        {{ form.password(class="form-control form-control-lg is-invalid") }}
-                        <div class="invalid-feedback">
-                            {% for error in form.password.errors %}
-                                <span>{{ error }}</span>
-                            {% endfor %}
-                        </div>
-                    {% else %}
-                        {{ form.password(class="form-control form-control-lg") }}
-                    {% endif %}
-                </div>
-                <div class="form-group">
-                    {{ form.name.label(class="form-control-label") }}
 
-                    {% if form.name.errors %}
-                        {{ form.name(class="form-control form-control-lg is-invalid") }}
-                        <div class="invalid-feedback">
-                            {% for error in form.name.errors %}
-                                <span>{{ error }}</span>
-                            {% endfor %}
-                        </div>
-                    {% else %}
-                        {{ form.name(class="form-control form-control-lg") }}
-                    {% endif %}
+                <div class="row">
+                  <div class="col form-group">
+                      {{ form.password.label(class="form-control-label") }}
+                      {% if form.password.errors %}
+                          {{ form.password(class="form-control form-control-lg is-invalid") }}
+                          <div class="invalid-feedback">
+                              {% for error in form.password.errors %}
+                                  <span>{{ error }}</span>
+                              {% endfor %}
+                          </div>
+                      {% else %}
+                          {{ form.password(class="form-control form-control-lg") }}
+                      {% endif %}
+                  </div>
+                  <div class="col form-group">
+                      {{ form.workplace.label(class="form-control-label") }}
+                      {% if form.workplace.errors %}
+                          {{ form.workplace(class="form-control form-control-lg is-invalid") }}
+                          <div class="invalid-feedback">
+                              {% for error in form.workplace.errors %}
+                                  <span>{{ error }}</span>
+                              {% endfor %}
+                          </div>
+                      {% else %}
+                          {{ form.workplace(class="form-control form-control-lg") }}
+                      {% endif %}
+                  </div>
                 </div>
-                <div class="form-group">
-                    {{ form.surname.label(class="form-control-label") }}
 
-                    {% if form.surname.errors %}
-                        {{ form.surname(class="form-control form-control-lg is-invalid") }}
-                        <div class="invalid-feedback">
-                            {% for error in form.surname.errors %}
-                                <span>{{ error }}</span>
-                            {% endfor %}
-                        </div>
-                    {% else %}
-                        {{ form.surname(class="form-control form-control-lg") }}
-                    {% endif %}
+                <div class="row">
+                  <div class="col form-group">
+                      {{ form.name.label(class="form-control-label") }}
+                      {% if form.name.errors %}
+                          {{ form.name(class="form-control form-control-lg is-invalid") }}
+                          <div class="invalid-feedback">
+                              {% for error in form.name.errors %}
+                                  <span>{{ error }}</span>
+                              {% endfor %}
+                          </div>
+                      {% else %}
+                          {{ form.name(class="form-control form-control-lg") }}
+                      {% endif %}
+                  </div>
+                  <div class="col form-group">
+                      {{ form.authorization.label(class="form-control-label") }}
+                      {% if form.authorization.errors %}
+                          {{ form.authorization(class="form-control form-control-lg is-invalid") }}
+                          <div class="invalid-feedback">
+                              {% for error in form.authorization.errors %}
+                                  <span>{{ error }}</span>
+                              {% endfor %}
+                          </div>
+                      {% else %}
+                          {{ form.authorization(class="form-select form-select-lg") }}
+                      {% endif %}
+                  </div>
                 </div>
-                <div class="form-group">
-                    {{ form.gender.label(class="form-control-label") }}
 
-                    {% if form.gender.errors %}
-                        {{ form.gender(class="form-control form-control-lg is-invalid") }}
-                        <div class="invalid-feedback">
-                            {% for error in form.gender.errors %}
-                                <span>{{ error }}</span>
-                            {% endfor %}
-                        </div>
-                    {% else %}
-                        {{ form.gender(class="form-select form-select-lg") }}
-                    {% endif %}
+                <div class="row">
+                  <div class="col form-group">
+                      {{ form.surname.label(class="form-control-label") }}
+                      {% if form.surname.errors %}
+                          {{ form.surname(class="form-control form-control-lg is-invalid") }}
+                          <div class="invalid-feedback">
+                              {% for error in form.surname.errors %}
+                                  <span>{{ error }}</span>
+                              {% endfor %}
+                          </div>
+                      {% else %}
+                          {{ form.surname(class="form-control form-control-lg") }}
+                      {% endif %}
+                  </div>
+                  <div class="col form-group">
+                      {{ form.default_vehicle.label(class="form-control-label") }}
+                      {% if form.default_vehicle.errors %}
+                          {{ form.default_vehicle(class="form-control form-control-lg is-invalid") }}
+                          <div class="invalid-feedback">
+                              {% for error in form.default_vehicle.errors %}
+                                  <span>{{ error }}</span>
+                              {% endfor %}
+                          </div>
+                      {% else %}
+                          {{ form.default_vehicle(class="form-select form-select-lg") }}
+                      {% endif %}
+                  </div>
                 </div>
-                <div class="form-group">
-                    {{ form.workplace.label(class="form-control-label") }}
-                    {% if form.workplace.errors %}
-                        {{ form.workplace(class="form-control form-control-lg is-invalid") }}
-                        <div class="invalid-feedback">
-                            {% for error in form.workplace.errors %}
-                                <span>{{ error }}</span>
-                            {% endfor %}
-                        </div>
-                    {% else %}
-                        {{ form.workplace(class="form-control form-control-lg") }}
-                    {% endif %}
-                </div>
+
+
+
+
+
+
+
+
 
                 {% if current_user.authorization == 's_admin'%}
                   <div class="form-group">
@@ -105,32 +147,8 @@
                 {% else %}
                   {{ form.company_id(class="sr-only form-select form-select-lg") }}
                 {% endif %}
-                <div class="form-group">
-                    {{ form.authorization.label(class="form-control-label") }}
-                    {% if form.authorization.errors %}
-                        {{ form.authorization(class="form-control form-control-lg is-invalid") }}
-                        <div class="invalid-feedback">
-                            {% for error in form.authorization.errors %}
-                                <span>{{ error }}</span>
-                            {% endfor %}
-                        </div>
-                    {% else %}
-                        {{ form.authorization(class="form-select form-select-lg") }}
-                    {% endif %}
-                </div>
-                <div class="form-group">
-                    {{ form.default_vehicle.label(class="form-control-label") }}
-                    {% if form.default_vehicle.errors %}
-                        {{ form.default_vehicle(class="form-control form-control-lg is-invalid") }}
-                        <div class="invalid-feedback">
-                            {% for error in form.default_vehicle.errors %}
-                                <span>{{ error }}</span>
-                            {% endfor %}
-                        </div>
-                    {% else %}
-                        {{ form.default_vehicle(class="form-select form-select-lg") }}
-                    {% endif %}
-                </div>
+
+                
             </fieldset>
             <div class="form-group">
           {{ form.submit(class="btn btn-outline-info") }}
