--- a/putninalozi/templates/travel_warrant_user.html
+++ b/putninalozi/templates/travel_warrant_user.html
@@ -9,33 +9,32 @@
       debag line: {{ form.errors }}
       {% endif %}
       <div id="accordionZero">
-      <div class="card">
-        <div class="card-header" id="headingZero">
-          <h5 class="mb-0">
-            <button type="button" class="btn" data-toggle="collapse" data-target="#collapseZero" aria-expanded="false" aria-controls="collapseZero">
-              <h1>Broj putnog naloga: {{ warrant.travel_warrant_id }}</h1>
-            </button>
-          </h5>
-        </div>
+        <div class="accordion" id="accordionZero">
+          <div class="accordion-item">
+            <div class="accordion-header" id="headingZero">
+              <button type="button" class="accordion-button" data-toggle="collapse" data-target="#collapseZero" aria-expanded="false" aria-controls="collapseZero">
+                <h1>Broj putnog naloga: {{ warrant.travel_warrant_number }}</h1>
+              </button>
+            </div>
 
-        <div id="collapseZero" class="collapse" aria-labelledby="headingZero" data-parent="#accordionZero">
-          <div class="card-body">
-            <h3>{{ rod[0] }} {{ warrant.travelwarrant_user.name }} {{ warrant.travelwarrant_user.surname }} {{ rod[1] }} na poslove radnog mesta {{ warrant.travelwarrant_user.workplace }} upućuje se na službeni put dana {{warrant.start_datetime.strftime('%d.%m.%Y')}} u {{ warrant.relation }} sa zadatkom: {{ warrant.with_task }}</h3>
-            <br>
-            <h3>Na službenom putu koristi prevozno sredstvo registarske tablice: {{ warrant.travelwarrant_vehicle.vehicle_registration }} {{ warrant.personal_registration }}</h3>
-            <br>
-            <h3>Dnevnica za ovo služebno putovanje pripada u iznosu od: {{ warrant.daily_wage }} {{ warrant.daily_wage_currency }}</h3>
-            <h3>Na službenom putu će se zadržati najdalje do {{ warrant.end_datetime.strftime('%d.%m.%Y') }}, a u roku od 48h po povratku sa službenog puta i dolask na posao, podnešće pismeni izveštaj o obavljenom službenom poslu. Račun o učinjenim putnim troškovima podneti u roku od tri dana</h3>
-            <br>
-            <h3>Putni troškovi padaju na teret: {{ warrant.costs_pays }}</h3>
-            <br>
-            {% if warrant.advance_payment > 0  %}
-              <h3>Odobravam isplatu akontacije u iznosu od: {{ warrant.advance_payment }} {{ warrant.advance_payment_currency }}</h3>
-            {% endif %}
+            <div id="collapseZero" class="collapse" aria-labelledby="headingZero" data-parent="#accordionZero">
+              <div class="card-body">
+                <h3>{{ rod[0] }} {{ warrant.travelwarrant_user.name }} {{ warrant.travelwarrant_user.surname }} {{ rod[1] }} na poslove radnog mesta {{ warrant.travelwarrant_user.workplace }} upućuje se na službeni put dana {{warrant.start_datetime.strftime('%d.%m.%Y')}} u {{ warrant.relation }} sa zadatkom: {{ warrant.with_task }}</h3>
+                <br>
+                <h3>Na službenom putu koristi prevozno sredstvo registarske tablice: {{ warrant.travelwarrant_vehicle.vehicle_registration }} {{ warrant.personal_registration }}</h3>
+                <br>
+                <h3>Dnevnica za ovo služebno putovanje pripada u iznosu od: {{ warrant.daily_wage }} {{ warrant.daily_wage_currency }}</h3>
+                <h3>Na službenom putu će se zadržati najdalje do {{ warrant.end_datetime.strftime('%d.%m.%Y') }}, a u roku od 48h po povratku sa službenog puta i dolask na posao, podnešće pismeni izveštaj o obavljenom službenom poslu. Račun o učinjenim putnim troškovima podneti u roku od tri dana</h3>
+                <br>
+                <h3>Putni troškovi padaju na teret: {{ warrant.costs_pays }}</h3>
+                <br>
+                {% if warrant.advance_payment > 0  %}
+                  <h3>Odobravam isplatu akontacije u iznosu od: {{ warrant.advance_payment }} {{ warrant.advance_payment_currency }}</h3>
+                {% endif %}
+              </div>
+            </div>
           </div>
         </div>
-      </div>
-      </div>
       <div class="form-box">
         {{ form.with_task.label(class="form-control-label") }}
           {% if form.with_task.errors %}
@@ -51,15 +50,12 @@
       </div>
       <br>
       <div id="accordionAbrod">
-      <div class="card">
-        <div class="card-header" id="headingAbrod">
-          <h5 class="mb-0">
-            <button type="button" class="btn" data-toggle="collapse" data-target="#collapseAbrod" aria-expanded="false" aria-controls="collapseAbrod">
+      <div class="accordion-item">
+        <div class="accordion-header" id="headingAbrod">
+            <button type="button" class="accordion-button" data-toggle="collapse" data-target="#collapseAbrod" aria-expanded="false" aria-controls="collapseAbrod">
               Putovanje U Inostranstvo
             </button>
-          </h5>
         </div>
-
         <div id="collapseAbrod" class="collapse" aria-labelledby="headingAbrod" data-parent="#accordionAbrod">
           <div class="card-body">
             {{ form.abroad_contry.label(class="form-control-label") }}
@@ -122,13 +118,11 @@
       </div>
       <br>
       <div id="accordion">
-        <div class="card">
-          <div class="card-header" id="headingOne">
-            <h5 class="mb-0">
-              <button type="button" class="btn " data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                {{ form.vehicle_id.label(class="form-control-label") }}
-              </button>
-            </h5>
+        <div class="accordion-item">
+          <div class="accordion-header" id="headingOne">
+            <button type="button" class="accordion-button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+              {{ form.vehicle_id.label(class="form-control-label") }}
+            </button>
           </div>
 
           <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
@@ -176,13 +170,11 @@
             </div>
           </div>
         </div>
-        <div class="card">
-          <div class="card-header" id="headingTwo">
-            <h5 class="mb-0">
-              <button type="button" class="btn collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                {{ form.together_with.label(class="form-control-label") }}
-              </button>
-            </h5>
+        <div class="accordion-item">
+          <div class="accordion-header" id="headingTwo">
+            <button type="button" class="accordion-button collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              {{ form.together_with.label(class="form-control-label") }}
+            </button>
           </div>
           <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
             <div class="card-body">
@@ -201,13 +193,11 @@
             </div>
           </div>
         </div>
-        <div class="card">
-          <div class="card-header" id="headingThree">
-            <h5 class="mb-0">
-              <button type="button" class="btn collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Lično Vozilo:
-              </button>
-            </h5>
+        <div class="accordion-item">
+          <div class="accordion-header" id="headingThree">
+            <button type="button" class="accordion-button collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+              Lično Vozilo:
+            </button>
           </div>
           <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
             <div class="card-body">
@@ -256,10 +246,10 @@
             </div>
           </div>
         </div>
-        <div class="card">
-          <div class="card-header" id="headingFour">
+        <div class="accordion-item">
+          <div class="accordion-header" id="headingFour">
             <h5 class="mb-0">
-              <button type="button" class="btn collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+              <button type="button" class="accordion-button collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                 {{ form.other.label(class="form-control-label") }}
               </button>
             </h5>
